# nntool

./: .gitignore  .gitmodules  NOTICE  README.adoc  build.gradle  common-server.Dockerfile  gradle.properties  ias-server.Dockerfile  ias-server.dockerignore  settings.gradle
PocketSocket/PocketSocket/: PSWebSocket.m  PSWebSocketDriver.m
WebBrowser/WebBrowser/: WebBrowserViewController.swift
android-app/: build.gradle  debug.keystore
android-common/: build.gradle
android-demo/: README.md  build.gradle
android-speed/: build.gradle
android-speed/libs/: widgets-release.aar
collector-service/: README.adoc  build.gradle
common/: README.md  build.sh
common-ios/: Podfile  README.md
common-ios/Common/: Common.m  Database.h  Database.m  Http.h  LogFormatter.h  Tool.h
common-ios/Demo/: AppDelegate.m  Info.plist  SpeedViewController.h  SpeedViewController.m
common-ios/Speed/: Speed.h  Speed.m
common-ios/common_ios.xcodeproj/: project.pbxproj
common-ios/common_ios.xcworkspace/: contents.xcworkspacedata
common-mobile/: copy_app_android.sh  copy_app_ios.sh  package-lock.json  package.json
common-server/: CMakeLists.txt  INSTALL  README.md  trace.ini
common-server/src/: CMakeLists.txt  basisthread.h  connection.cpp  connection.h  header.h  hthandler.h  htlistener.cpp  serverMonitoring.cpp  serverMonitoring.h  tool.h  trace.cpp  wshandler.cpp  wshandler.h  wslistener.h  wsserver.cpp
common/src/: Control.js  ControlSingleThread.js  Ias.js  Measurement.js  PortBlocking.js  Worker.js  WorkerSingleThread.js
controller-service/: README.adoc  build.gradle
couchdb-client/: build.gradle
couchdb-spring-boot-autoconfigure/: build.gradle
couchdb-spring-boot-starter/: build.gradle
docs/: README.adoc  authentication.adoc  build.gradle  history_sequence_diagram.xml  load_balancing_service.adoc  measurement_sequence_diagram.xml  portal_architecture.xml  reference_system_architecture.xml  registration_sequence_diagram.xml
docs/build_instructions/: android.adoc  default_base_settings.json  default_couchDB_data.json  servers.adoc  (+4 more)
gradle/: clover.gradle  clover_aggregate.gradle  git_info.gradle  java7.gradle  java8.gradle  spring_boot_project.gradle  spring_profile_dev.gradle  spring_profile_prod.gradle
ias/: .gitignore  README.adoc  README.md  build.sh  karma.conf.js  package-lock.json  package.json  replace.conf.js
ias-android-common/: README.adoc  build.gradle  proguard-rules.pro
ias-android-demo/: README.adoc  README.md  build.gradle  proguard-rules.pro
ias-android-speed/: README.adoc  build.gradle
ias-cpp/: CMakeLists.txt  INSTALL  README.adoc  README.md
ias-cpp/src/: CMakeLists.txt  android_connector.cpp  android_connector.h  callback.cpp  callback.h  download_test.cpp  header.h  iasclient.cpp  iasclient_test.cpp  measurement.cpp  measurement.h  ping_test.cpp  test.h  timer.cpp  timer.h  timer_test.cpp  type.cpp  type.h  upload_test.cpp
ias-cpp/src/tests/: download.cpp  download.h  ping.cpp  ping.h  upload.cpp  upload.h  upload_sender.cpp  upload_sender.h
ias-desktop/: .gitignore  README.adoc  README.md  ias-desktop.html  ias-desktop.js  main.js  package-lock.json  package.json
ias-ios/: Podfile  README.adoc  README.md
ias-libnntool/: CMakeLists.txt  README.adoc  basisthread.cpp  basisthread.h  boringssl.cmake  build.gradle  configmanager.cpp  configmanager.h  configmanager_test.cpp  connection.cpp  connection.h  connection_test.cpp  header.h  http.cpp  http.h  http_test.cpp  json11_test.cpp  libnntool_test.cpp  sha1_test.cpp  tool.cpp  tool.h  tool_test.cpp  trace.cpp  trace.h  typedef.cpp  typedef.h
ias-mobile/: README.adoc  README.md  copy_app_android.sh  copy_app_ios.sh  package-lock.json  package.json
ias-server/: .gitignore  CMakeLists.txt  INSTALL  README.adoc  README.md  config.json  ias-server.service  ias-turnserver  libnopoll.cmake  trace.ini
ias-server/src/: CMakeLists.txt  basisthread.cpp  header.h  hthandler.cpp  htlistener.h  iasserver.cpp  iasserver_test.cpp  load_balancing.cpp  load_balancing.h  load_monitoring.cpp  load_monitoring.h  load_monitoring_test.cpp  tcphandler.cpp  tcphandler.h  tcphandler_test.cpp  tcpserver.cpp  tcpserver.h  tcpserver_test.cpp  tcptraceroutehandler.cpp  tcptraceroutehandler.h  tool.cpp  trace.h  udpserver.cpp  udpserver.h  udpserver_test.cpp  wshandler.cpp  wslistener.cpp  wsserver.cpp
ias-server/src/libs/: sha1.cpp  sha1.hpp
ias-server/test_files/: config.json  localhost.crt  localhost.key
ios-app/: .bartycrouch.toml  .gitignore  .jazzy.yaml  .swiftlint.yml  Gemfile  Podfile  README.adoc
map-service/: README.adoc  build.gradle
measurement-agent-swift/: .jazzy.yaml  .swiftlint.yml  Gemfile  MeasurementAgentKit.podspec  MeasurementAgentKit.podspec.json  Podfile
nettest-shared/: build.gradle
nettest-shared-server/: build.gradle
nettest-shared-server-opendata/: build.gradle
nettest-shared-server-storage-couchdb/: build.gradle
nettest-shared-server-storage-postgresql/: build.gradle
nntool-shared-swift/: Podfile  nntool-shared-swift.podspec
nntool-typescript/: .gitignore  .prettierignore  README.adoc  angular.json  karma.conf.js  nx.json  package-lock.json  package.json  tsconfig.json  tslint.json
opendata-collector-service/: README.adoc  build.gradle
qos-client-android/: build.gradle  proguard-rules.pro
qos-client-java/: build.gradle
qos-client-swift/: .jazzy.yaml  .swiftlint.yml  Podfile  QoSKit.podspec.json
qos-cpp/: Android.mk  CMakeLists.txt  qos-client-cpp.podspec
qos-cpp/src/: AudioStreamingTest.cpp  AudioStreamingTest.h  AudioStreamingWrapper.h  AudioStreamingWrapper.mm  JniConnector.cpp  JniConnector.h  gst_ios_init.h  gst_ios_init.m
qos-service/: .gitignore  build.gradle
result-service/: README.adoc
search-service/: README.adoc  build.gradle
spring-data-couchdb/: build.gradle
statistic-service/: README.adoc  build.gradle
website/: .gitignore  README.adoc  angular.json  bs-config.json  extra-webpack.config.js  gulpfile.js  ias-package.json  package-lock.json  package.json  prepare-common.js  prepare-ias.js  tsconfig.json  tslint.json
(+2622 files in other folders)
